@@ -103,6 +103,7 @@ All (GUI):
 - Fixed buffer overrun when saving ICO image with a width that's not a multiple of 4.
 - Fixed wxOwnerDrawnComboBox/wxBitmapComboBox client data corruption when
   wxCB_SORT is used.
+- Added wxVListBox::GetItemRect.
 
 wxMSW:
 
